--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ addons:
     - libelf-dev
     - libdw-dev
     - binutils-dev
+    - libiberty-dev
+    - g++
 
 matrix:
   include:
@@ -19,28 +21,9 @@ cache:
     apt: true
 
 script:
-  - cargo build --verbose $FEATURES
-  - cargo test --verbose $FEATURES
+  - cargo build
+  - cargo test
   - rustdoc --test README.md -L target/debug/deps -L target/debug
-  - 'if [[ $TRAVIS_RUST_VERSION = nightly ]]; then
-       (cargo install clippy && cargo clippy -- --test)
-     fi'
-
-after_success:
-  - '[ $TRAVIS_RUST_VERSION = stable ] &&
-    LOCAL="~/.local" && export PATH=$LOCAL/bin:$PATH &&
-    wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
-    tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build &&
-    cmake -DCMAKE_INSTALL_PREFIX:PATH=$LOCAL .. && make && make install && cd ../.. &&
-    ls target/debug &&
-    RUSTFLAGS="-C link-dead-code" cargo test --no-run &&
-    for file in target/debug/slack_hook-*; do
-      if [[ "${file: -2}" != ".d" ]]; then
-        mkdir -p "target/cov/$(basename $file)";
-        kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file";
-      fi;
-    done &&
-    kcov --coveralls-id=$TRAVIS_JOB_ID --merge target/cov target/cov/*'
 
 notifications:
   slack:
