--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,21 @@
 [package]
-authors = ["Christopher Brickley <brickley@gmail.com>"]
+authors = ["Christopher Brickley <brickley@gmail.com>", "Nyah Check <hello@nyah.dev>"]
 description = "A rust crate for sending messages to Slack via webhooks."
-homepage = "https://github.com/frostly/rust-slack"
+homepage = "https://github.com/ch3ck/rusty-slack"
 keywords = ["slack", "webhook", "hook", "messaging"]
 license = "MIT/Apache-2.0"
-name = "slack-hook"
+name = "slack-hooked"
 readme = "README.md"
-repository = "https://github.com/frostly/rust-slack"
+repository = "https://github.com/ch3ck/rusty-slack"
 version = "0.8.0"
-edition = "2018"
+edition = "2021"
+
 
 [dependencies]
 chrono = "0.4"
-reqwest = "0.9"
-hex = "0.3"
-error-chain = "~0.11"
-serde = "1"
-serde_derive = "1"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+hex = "0.4"
+error-chain = "0.12"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
-url_serde = "0.2"
+url = { version = "2", features = ["serde"] }
