--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ license = "MIT/Apache-2.0"
 name = "slack-hooked"
 readme = "README.md"
 repository = "https://github.com/ch3ck/rusty-slack"
-version = "0.9.0"
+version = "0.10.0"
 edition = "2021"
 
+[features]
+async = []
 
 [dependencies]
 chrono = "0.4"
